--- a/make.conf
+++ b/make.conf
@@ -34,7 +34,7 @@ INPUT_DEVICES="libinput keyboard mouse"
 # Portage configuration
 PKGDIR="/var/cache/binpkgs"
 PORTAGE_LOGDIR="/var/log/portage"
-PORTDIR_OVERLAY="/usr/local/portage"
+# PORTDIR_OVERLAY="/usr/local/portage"
 DISTDIR="/var/cache/distfiles"
 PORTAGE_TMPDIR="/var/tmp"
 PORTAGE_CONFIGROOT='/'
