--- a/repos.conf/gentoo.conf
+++ b/repos.conf/gentoo.conf
@@ -2,9 +2,9 @@
 main-repo = gentoo
 
 [gentoo]
-location = /usr/portage
+location = /var/db/pkg
 sync-type = rsync
-sync-uri = rsync://mirror.dkm.cz/gentoo/ rsync://ftp.fi.muni.cz/pub/linux/gentoo/
+sync-uri = rsync://mirrors.tera-byte.com/gentoo
 auto-sync = yes
 sync-rsync-verify-jobs = 1
 sync-rsync-verify-metamanifest = yes
