--- a/make.conf
+++ b/make.conf
@@ -15,8 +15,8 @@ CBUILD="x86_64-pc-linux-gnu"
 MAKEOPTS="-j$(nproc)"
 ## FIXME: Set VIDEO_CARDS
 # VIDEO_CARDS="amdgpu radeonsi"
-MY_CPU_FLAGS="$(cpuid2cpuflags)"
-CPU_FLAGS_X86="${MY_CPU_FLAGS##CPU_FLAGS_X86: }"
+#MY_CPU_FLAGS="$(cpuid2cpuflags)"
+#CPU_FLAGS_X86="${MY_CPU_FLAGS##CPU_FLAGS_X86: }"
 
 ## -test - Gentoo is not optimized to run tests
 USE="-* -test"
