--- a/make.conf
+++ b/make.conf
@@ -12,7 +12,7 @@ FCFLAGS="$COMMON_FLAGS"
 LDFLAGS="-Wl,-O1 -Wl,--as-needed"
 CHOST="x86_64-pc-linux-gnu"
 CBUILD="x86_64-pc-linux-gnu"
-MAKEOPTS="-j$(nproc)"
+#MAKEOPTS="-j$(nproc)"
 ## FIXME: Set VIDEO_CARDS
 # VIDEO_CARDS="amdgpu radeonsi"
 #MY_CPU_FLAGS="$(cpuid2cpuflags)"
