--- a/make.conf
+++ b/make.conf
@@ -12,11 +12,11 @@ FCFLAGS="$COMMON_FLAGS"
 LDFLAGS="-Wl,-O1 -Wl,--as-needed"
 CHOST="x86_64-pc-linux-gnu"
 CBUILD="x86_64-pc-linux-gnu"
-#MAKEOPTS="-j$(nproc)"
+MAKEOPTS="-j$(nproc)"
 ## FIXME: Set VIDEO_CARDS
 # VIDEO_CARDS="amdgpu radeonsi"
-#MY_CPU_FLAGS="$(cpuid2cpuflags)"
-#CPU_FLAGS_X86="${MY_CPU_FLAGS##CPU_FLAGS_X86: }"
+MY_CPU_FLAGS="$(cpuid2cpuflags)"
+CPU_FLAGS_X86="${MY_CPU_FLAGS##CPU_FLAGS_X86: }"
 
 ## -test - Gentoo is not optimized to run tests
 USE="-* -test"
@@ -32,13 +32,13 @@ KERNEL="linux"
 INPUT_DEVICES="libinput keyboard mouse"
 
 # Portage configuration
-PKGDIR="/var/cache/binpkgs"
-PORTAGE_LOGDIR="/var/log/portage"
+#PKGDIR="/var/cache/binpkgs"
+#PORTAGE_LOGDIR="/var/log/portage"
 # PORTDIR_OVERLAY="/usr/local/portage"
-DISTDIR="/var/cache/distfiles"
-PORTAGE_TMPDIR="/var/tmp"
-PORTAGE_CONFIGROOT='/'
-CONFIG_PROTECT='/etc /usr/share/gnupg/qualified.txt'
+#DISTDIR="/var/cache/distfiles"
+#PORTAGE_TMPDIR="/var/tmp"
+#PORTAGE_CONFIGROOT='/'
+#CONFIG_PROTECT='/etc /usr/share/gnupg/qualified.txt'
 PORTAGE_RSYNC_OPTS="--recursive --links --safe-links --perms --times --omit-dir-times --compress --force --whole-file --delete --stats --human-readable --timeout=180 --exclude=/distfiles --exclude=/local --exclude=/packages --exclude=/.git"
 
 EMERGE_DEFAULT_OPTS="--jobs --autounmask-write --verbose-conflicts"
