--- a/make.conf
+++ b/make.conf
@@ -12,11 +12,13 @@ FCFLAGS="$COMMON_FLAGS"
 LDFLAGS="-Wl,-O1 -Wl,--as-needed"
 CHOST="x86_64-pc-linux-gnu"
 CBUILD="x86_64-pc-linux-gnu"
-MAKEOPTS="-j$(nproc)"
+## FIXME: Export thread number
+#MAKEOPTS="-j$(nproc)"
 ## FIXME: Set VIDEO_CARDS
 # VIDEO_CARDS="amdgpu radeonsi"
-MY_CPU_FLAGS="$(cpuid2cpuflags)"
-CPU_FLAGS_X86="${MY_CPU_FLAGS##CPU_FLAGS_X86: }"
+## FIXME: Export cpu flags
+#MY_CPU_FLAGS="$(cpuid2cpuflags)"
+#CPU_FLAGS_X86="${MY_CPU_FLAGS##CPU_FLAGS_X86: }"
 
 ## -test - Gentoo is not optimized to run tests
 USE="-* -test"
