--- a/make.conf
+++ b/make.conf
@@ -23,6 +23,8 @@ CBUILD="x86_64-pc-linux-gnu"
 ## -test - Gentoo is not optimized to run tests
 USE="-* -test"
 
+GENTOO_MIRRORS="rsync://mirrors.tera-byte.com/gentoo"
+
 # Package configuration
 ACCEPT_LICENSE="-* @FREE"
 ACCEPT_KEYWORDS="amd64 ~amd64"
